# monsab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  benchmark.py  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: action.rs  builder.rs  lib.rs  matrix.rs  monomial.rs  pc.rs  permutation.rs  representation.rs  transform.rs
benchmarks/: cyclic_maxcut.py
src/monsab/: __init__.py  _backend.pyi
src/monsab/core/: __init__.py  _baum_clausen.py  _matrix.py  _pc.py  _perm.py  _permutation.py  _polycyclic.py  _rep.py  _representation.py  _transform.py
src/monsab/pop/: __init__.py  _lasserre.py  _monomials.py
src/monsab/util/: __init__.py  _primes.py  _random.py  _tests.py
src/monsab/zoo/: __init__.py  _abelian.py  _base.py  _dihedral.py  _metacyclic.py  _product.py
tests/: test_api_high_level.py  test_core_baum_clausen.py  test_core_d8_q8_bc.py  test_core_d8_q8_transform.py  test_core_fs_indicator.py  test_core_inverse_sab.py  test_core_matrix.py  test_core_orbit.py  test_core_permutation.py  test_core_polycyclic.py  test_core_real_transform.py  test_core_representation.py  test_core_transform.py  test_pop_lasserre.py  test_pop_monomials.py  test_pop_reynolds.py  test_util_primes.py  test_zoo_abelian.py  test_zoo_base.py  test_zoo_metacyclic.py  test_zoo_product.py
